src/type_/snapshots/geam__type___tests__accept_imported_module_select_call.snap
---
source: src/type_/tests.rs
expression: "analyse_with(r#\"\nimport gleam/io\n\npub fn main(message: String) {\n  io.println(message)\n}\n\"#,\nio_imports(),)"
---
Ok(
    Module {
        name: "main",
        path: "main.gleam",
        documentation: [],
        type_info: ModuleInterface {
            name: "main",
            types: {},
            values: {
                "main": ValueConstructor {
                    publicity: Public,
                    variant: ModuleFn,
                    type_: Fn {
                        arguments: [
                            Named {
                                module: "gleam",
                                name: "String",
                                arguments: [],
                            },
                        ],
                        return_: Named {
                            module: "gleam",
                            name: "Nil",
                            arguments: [],
                        },
                    },
                    parameter_labels: [],
                },
            },
        },
        definitions: TypedDefinitions {
            imports: [
                Import {
                    location: SrcSpan {
                        start: 1,
                        end: 16,
                    },
                    module: "gleam/io",
                    alias: None,
                },
            ],
            custom_types: [],
            type_aliases: [],
            functions: [
                Function {
                    location: SrcSpan {
                        start: 22,
                        end: 29,
                    },
                    body_start: Some(
                        47,
                    ),
                    end_position: 72,
                    name: Some(
                        (
                            SrcSpan {
                                start: 25,
                                end: 29,
                            },
                            "main",
                        ),
                    ),
                    arguments: [
                        Arg {
                            location: SrcSpan {
                                start: 30,
                                end: 45,
                            },
                            name: (
                                SrcSpan {
                                    start: 30,
                                    end: 37,
                                },
                                "message",
                            ),
                            annotation: Some(
                                Constructor {
                                    location: SrcSpan {
                                        start: 39,
                                        end: 45,
                                    },
                                    module: None,
                                    name: (
                                        SrcSpan {
                                            start: 39,
                                            end: 45,
                                        },
                                        "String",
                                    ),
                                    arguments: [],
                                },
                            ),
                            type_: Named {
                                module: "gleam",
                                name: "String",
                                arguments: [],
                            },
                        },
                    ],
                    body: [
                        Expression(
                            Call {
                                location: SrcSpan {
                                    start: 51,
                                    end: 70,
                                },
                                type_: Named {
                                    module: "gleam",
                                    name: "Nil",
                                    arguments: [],
                                },
                                fun: ModuleSelect {
                                    location: SrcSpan {
                                        start: 51,
                                        end: 61,
                                    },
                                    type_: Fn {
                                        arguments: [
                                            Named {
                                                module: "gleam",
                                                name: "String",
                                                arguments: [],
                                            },
                                        ],
                                        return_: Named {
                                            module: "gleam",
                                            name: "Nil",
                                            arguments: [],
                                        },
                                    },
                                    module_name: "gleam/io",
                                    module_alias: "io",
                                    label: "println",
                                },
                                arguments: [
                                    CallArg {
                                        location: SrcSpan {
                                            start: 62,
                                            end: 69,
                                        },
                                        label: None,
                                        value: Var {
                                            location: SrcSpan {
                                                start: 62,
                                                end: 69,
                                            },
                                            type_: Named {
                                                module: "gleam",
                                                name: "String",
                                                arguments: [],
                                            },
                                            name: "message",
                                        },
                                    },
                                ],
                                open_parenthesis: 61,
                            },
                        ),
                    ],
                    publicity: Public,
                    return_annotation: None,
                    return_type: Named {
                        module: "gleam",
                        name: "Nil",
                        arguments: [],
                    },
                },
            ],
        },
    },
)
