src/type_/snapshots/geam__type___tests__accept_unannotated_function_argument_inference.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn identity(value) {\n  value\n}\n\npub fn add_one(value) {\n  value + 1\n}\n\"#)"
---
Ok(
    Module {
        name: "main",
        path: "main.gleam",
        documentation: [],
        type_info: ModuleInterface {
            name: "main",
            types: {},
            values: {
                "add_one": ValueConstructor {
                    publicity: Public,
                    variant: ModuleFn,
                    type_: Fn {
                        arguments: [
                            Named {
                                module: "gleam",
                                name: "Int",
                                arguments: [],
                            },
                        ],
                        return_: Named {
                            module: "gleam",
                            name: "Int",
                            arguments: [],
                        },
                    },
                    parameter_labels: [],
                },
                "identity": ValueConstructor {
                    publicity: Public,
                    variant: ModuleFn,
                    type_: Fn {
                        arguments: [
                            Var {
                                name: "a",
                            },
                        ],
                        return_: Var {
                            name: "a",
                        },
                    },
                    parameter_labels: [],
                },
            },
        },
        definitions: TypedDefinitions {
            imports: [],
            custom_types: [],
            type_aliases: [],
            functions: [
                Function {
                    location: SrcSpan {
                        start: 5,
                        end: 16,
                    },
                    body_start: Some(
                        24,
                    ),
                    end_position: 35,
                    name: Some(
                        (
                            SrcSpan {
                                start: 8,
                                end: 16,
                            },
                            "identity",
                        ),
                    ),
                    arguments: [
                        Arg {
                            location: SrcSpan {
                                start: 17,
                                end: 22,
                            },
                            name: (
                                SrcSpan {
                                    start: 17,
                                    end: 22,
                                },
                                "value",
                            ),
                            annotation: None,
                            type_: Var {
                                name: "a",
                            },
                        },
                    ],
                    body: [
                        Expression(
                            Var {
                                location: SrcSpan {
                                    start: 28,
                                    end: 33,
                                },
                                type_: Var {
                                    name: "a",
                                },
                                name: "value",
                            },
                        ),
                    ],
                    publicity: Public,
                    return_annotation: None,
                    return_type: Var {
                        name: "a",
                    },
                },
                Function {
                    location: SrcSpan {
                        start: 41,
                        end: 51,
                    },
                    body_start: Some(
                        59,
                    ),
                    end_position: 74,
                    name: Some(
                        (
                            SrcSpan {
                                start: 44,
                                end: 51,
                            },
                            "add_one",
                        ),
                    ),
                    arguments: [
                        Arg {
                            location: SrcSpan {
                                start: 52,
                                end: 57,
                            },
                            name: (
                                SrcSpan {
                                    start: 52,
                                    end: 57,
                                },
                                "value",
                            ),
                            annotation: None,
                            type_: Named {
                                module: "gleam",
                                name: "Int",
                                arguments: [],
                            },
                        },
                    ],
                    body: [
                        Expression(
                            BinOp {
                                location: SrcSpan {
                                    start: 63,
                                    end: 72,
                                },
                                type_: Named {
                                    module: "gleam",
                                    name: "Int",
                                    arguments: [],
                                },
                                operator: AddInt,
                                operator_start: 69,
                                left: Var {
                                    location: SrcSpan {
                                        start: 63,
                                        end: 68,
                                    },
                                    type_: Named {
                                        module: "gleam",
                                        name: "Int",
                                        arguments: [],
                                    },
                                    name: "value",
                                },
                                right: Int {
                                    location: SrcSpan {
                                        start: 71,
                                        end: 72,
                                    },
                                    type_: Named {
                                        module: "gleam",
                                        name: "Int",
                                        arguments: [],
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                            },
                        ),
                    ],
                    publicity: Public,
                    return_annotation: None,
                    return_type: Named {
                        module: "gleam",
                        name: "Int",
                        arguments: [],
                    },
                },
            ],
        },
    },
)
